name:                blog
version:             0.2.0.0
synopsis:            My blog
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          travitch@cs.wisc.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is: site.hs
  build-depends: base, hakyll >= 4.3 && < 5
  ghc-options: -Wall -fno-warn-unused-do-bind
