name:                blog
version:             0.2.0.0
synopsis:            My blog
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is: site.hs
  build-depends: base, hakyll >= 4.7 && < 4.9
  ghc-options: -Wall -fno-warn-unused-do-bind
